# bat-symphony

./: .gitignore  CLAUDE.md  pyproject.toml
bat_symphony/: __init__.py  __main__.py  config.py  daemon.py  ollama.py
bat_symphony/agents/: __init__.py  base.py  builtin.py  router.py
bat_symphony/bridge/: __init__.py  agent_bus.py  http_server.py  shared_memory.py  telemetry.py
bat_symphony/learner/: __init__.py  crystallizer.py  loop.py  self_writer.py  validator.py
bat_symphony/memory/: reflection.py  store.py
bat_symphony/watchers/: __init__.py  git_watcher.py
scripts/: daemon.ps1  doctor.ps1
tests/: test_agent_bus.py  test_agents.py  test_config.py  test_crystallizer.py  test_daemon.py  test_git_watcher.py  test_http_server.py  test_learning_loop.py  test_memory_store.py  test_ollama.py  test_reflection.py  test_shared_memory.py  test_telemetry.py  test_validator.py
